<?xml version="1.0" encoding="utf-8"?>
<!-- Show Logo Animation -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="10pt"
        android:gravity="center"
        android:text=""/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">    
    
	    <LinearLayout
	        android:id="@+id/leftbutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="vertical">            
        
		    <ImageView
		        android:id="@+id/lefthandlebar"
		        android:layout_width="126dp"
		        android:layout_height="126dp"
		        android:layout_gravity="center"
		        android:background="#00ffffff"
		        android:contentDescription="@+id/lefthandlebar"
		        android:src="@drawable/lefthandlebar"/>
		    
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="20pt"
		        android:gravity="center"
		        android:text="@string/left_handle_bar"/>	    
		</LinearLayout>	 		    
		    
	    <TextView
	        android:layout_width="10pt"
	        android:layout_height="126dp"
	        android:gravity="center"
	        android:text="" />	    
	    
	    <LinearLayout
	        android:id="@+id/rightbutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:orientation="vertical">            
        
		    <ImageView
		        android:id="@+id/righthandlebar"
		        android:layout_width="126dp"
		        android:layout_height="126dp"
		        android:layout_gravity="center"
		        android:background="#00ffffff"
		        android:contentDescription="@+id/righthandlebar"
		        android:src="@drawable/righthandlebar"/>
		    
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="20pt"
		        android:gravity="center"
		        android:text="@string/right_handle_bar"/>	    
		</LinearLayout>	 			    
	</LinearLayout>	    
	      
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="5pt"
        android:gravity="center"
        android:text=""/>
    
    <ImageButton
        android:id="@+id/connectButton"
        android:layout_width="142dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:background="#00ffffff"
        android:src="@drawable/connectbutton"
        android:contentDescription="@+id/connectButton"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="25pt"
        android:gravity="center"
        android:textColor="@drawable/orange"
        android:text="@string/instruction_1"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">       
    
	    <TextView
	        android:layout_width="10pt"
	        android:layout_height="25pt"
	        android:gravity="center"
	        android:text=""/>        
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="25pt"
	        android:gravity="center"
	        android:text="@string/instruction_2"
	        android:textColor="@drawable/grey" />
	    
	    <TextView
	        android:layout_width="10pt"
	        android:layout_height="25pt"
	        android:gravity="center"
	        android:text=""/>   	    
    </LinearLayout>
	    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="5pt"
        android:gravity="center"
        android:text=""/>    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">       
    
	    <TextView
	        android:layout_width="20pt"
	        android:layout_height="25pt"
	        android:gravity="center"
	        android:text=""/>        
        
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="25pt"
	        android:gravity="center"
	        android:text="@string/instruction_3"
	        android:textColor="@drawable/grey" />
	    
	    <TextView
	        android:layout_width="20pt"
	        android:layout_height="25pt"
	        android:gravity="center"
	        android:text=""/>   	    
    </LinearLayout>   
</LinearLayout>   